--- a/examples/hello-scott/Makefile
+++ b/examples/hello-scott/Makefile
@@ -3,6 +3,7 @@ all: $(CONTIKI_PROJECT)
 
 CONTIKI = ../..
 
+MAKE_MAC = MAKE_MAC_TSCH
 MODULES += os/services/shell
 
 include $(CONTIKI)/Makefile.include
