Nodes can connect to the TSCH Coordinator but nodes are unable to ping each other.

--- a/examples/hello-scott/Makefile
+++ b/examples/hello-scott/Makefile
@@ -1,9 +1,15 @@
-CONTIKI_PROJECT = hello-scott
-all: $(CONTIKI_PROJECT)
+CONTIKI_PROJECT		= hello-scott
+
+
+PLATFORMS_EXCLUDE = sky nrf52dk native simplelink
 
 CONTIKI = ../..
 
 MAKE_MAC = MAKE_MAC_TSCH
-MODULES += os/services/shell
+# MAKE_ROUTING = MAKE_ROUTING_NULLROUTING
 
+MODULES += os/services/shell
+MODULES += os/net/mac/tsch/sixtop
+
+all: $(CONTIKI_PROJECT)         
 include $(CONTIKI)/Makefile.include
